%% ERD du département importé (groupe 2) - CUSTOMER / RESERVATIONS / LOYALTY

erDiagram
    CUSTOMER {
        int customer_id PK
        string first_name
        string last_name
        string email "UNIQUE"
        string phone "UNIQUE"
        date created_at
    }
    LOYALTY_TIER {
        int tier_id PK
        string level "UNIQUE"
    }
    REASON {
        int reason_id PK
        string description "UNIQUE"
    }
    STATUS_TYPE {
        int status_id PK
        string description "UNIQUE"
    }
    LOYALTY {
        int loyalty_id PK
        int customer_id FK "UNIQUE"
        int tier_id FK
        int points
        date last_updated
    }
    LOYALTY_TRANSACTION {
        int transaction_id PK
        int loyalty_id FK
        int reason_id FK
        int points_change
        date created_at
    }
    RESERVATION {
        int reservation_id PK
        int customer_id FK
        int status_id FK
        date datetime
        int party_size
    }
    FEEDBACK {
        int feedback_id PK
        int reservation_id FK "UNIQUE"
        int rating
        string comment
    }
    WAITLIST {
        int waitlist_id PK
        int customer_id FK
        int status_id FK
        int party_size
        int est_wait_time
    }

    CUSTOMER     ||--o{ RESERVATION         : "makes"
    CUSTOMER     ||--o| LOYALTY             : "owns (1-1)"
    CUSTOMER     ||--o{ WAITLIST            : "joins"
    LOYALTY_TIER ||--o{ LOYALTY             : "ranks"
    LOYALTY      ||--o{ LOYALTY_TRANSACTION : "tracks"
    REASON       ||--o{ LOYALTY_TRANSACTION : "explains"
    STATUS_TYPE  ||--o{ RESERVATION         : "labels"
    STATUS_TYPE  ||--o{ WAITLIST            : "labels"
    RESERVATION  ||--o| FEEDBACK            : "receives (1-1)"
